Fix dialog example alignment

--- a/assets/page.css
+++ b/assets/page.css
@@ -155,7 +155,7 @@ label:has(#saturation-range, #color-range) {
 
 .example .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
   gap: var(--scale-4);
   justify-items: center;
 }
